# iterpreter.py

./: .envrc  .gitattributes  .gitignore  Makefile  README.md  build.Dockerfile  environment.yml  pyproject.toml  requirements.txt  requirments.txt
.github/workflows/: bench.yml  rpython.yml  test.yml
programs/: bench.ki  closure.ki  fibo.ki  loops.ki  loops_recursive.ki  sequence.ki
scripts/: bench.sh  translate_and_store.sh
src/: awk_main.py  awk_repl.py  config.py  ioc.py  kimchi_io.py  kimchi_ioc.py  kimchi_main.py  kimchi_repl.py  kimchi_tk.py  main.py  repl.py  test_program.py  tk.py  token.py  trace.py
src/ast/: __init__.py  ast.py  test_ast.py
src/awk_ast/: __init__.py  test_ast.py
src/awk_lexer/: lexer.py  test_lexer.py
src/awk_parser/: parser.py  test_parser.py
src/kimchi_ast/: __init__.py  ast.py  test_ast.py
src/kimchi_evaluator/: __init__.py  builtins.py  const.py  evaluator.py  test_evaluator.py
src/kimchi_lexer/: lexer.py  test_lexer.py
src/kimchi_object/: __init__.py  array.py  boolean.py  builtin.py  environment.py  error.py  function.py  hash.py  hash_key.py  hash_pair.py  integer.py  kimchi_hash.py  null.py  object.py  return_value.py  string.py  test_object.py
src/kimchi_parser/: parser.py  test_parser.py
src/lexer/: lexer.py  test_lexer.py
src/parser/: parser.py  test_parser.py
src/token/: token.py
