[tool.poetry]
name = "iterpreter.rpy"
version = "0.1.0"
description = ""
authors = ["Pavel Durov <pav3ldurov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
