[tool.poetry]
name = "iterpreter.rpy"
version = "0.1.0"
description = ""
authors = ["Pavel Durov <pav3ldurov@gmail.com>"]

[tool.poetry.dependencies]
python = "2.7.18"
rpython = "^0.2.1"


[tool.poetry.dev-dependencies]
pytest = "2.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
